Hover Effect on poster commit

--- a/index.html
+++ b/index.html
@@ -53,18 +53,48 @@
                 <div class="explore-grid">
                     <div class="explore-items">
                         <img src="./imgs/explore/m1.png" alt="">
+                        <div class="caption">
+                            <h4>Predator</h4>
+                            <div class="explore">
+                                <button>Rent</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="explore-items">
                         <img src="./imgs/explore/m2.png" alt="">
+                        <div class="caption">
+                            <h4>Baazaar</h4>
+                            <div class="explore">
+                                <button>Rent</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="explore-items">
                         <img src="./imgs/explore/m3.png" alt="">
+                        <div class="caption">
+                            <h4>SkyScraper</h4>
+                            <div class="explore">
+                                <button>Rent</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="explore-items">
                         <img src="./imgs/explore/m4.png" alt="">
+                        <div class="caption">
+                            <h4>Soorma</h4>
+                            <div class="explore">
+                                <button>Rent</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="explore-items">
                         <img src="./imgs/explore/m5.png" alt="">
+                        <div class="caption">
+                            <h4>Ant Man</h4>
+                            <div class="explore">
+                                <button>Rent</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -75,6 +105,8 @@
             </footer>
         </div>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./js/custom.js"></script>
 </body>
 
 </html>
